--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   ],
   "devDependencies": {
     "prettier": "2.7.1"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1"
   }
 }
